--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="todo-wrapper"></div>
-    <script src="app/bundle.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
